Changelog
=========


3.3.8 (unreleased)
------------------

- Nothing changed yet.


3.3.7 (2013-08-26)
------------------

- Move table_options initalization from __call__ to __init__ in listing.py.
  Otherwise the update method does not work without calling the view first.
  [mathias.leimgruber]

- Fix deprecated quickupload interface import.
  [jone]


3.3.6 (2013-07-18)
------------------

- Filter field: add placeholder.
  [jone]

- Fixed markup in tabbedview buttons and added a class to identify buttons.
  [Julian Infanger]

- Mark tabbedview header with disabledSearchBox class if the searchbox is disabled.
  [Julian Infanger]


3.3.5 (2013-04-17)
------------------

- Use removeAttr (jQuery 1.7.x).
  [mathias.leimgruber]

- Fix reset table configuration action.
  [mathias.leimgruber]

- Use Batch.fromPagenumber.
  [mathias.leimgruber]


3.3.4 (2013-01-25)
------------------

- Add INoExtJS marker interface disabling extjs when provided
  by the tabbview and the tab
  [mathias.leimgruber]


3.3.3 (2013-01-21)
------------------

- Add default dynamic batching form to batching template. #11
  [jone]

- Fix javascript order in ExtJS profile.
  [jone]

- Fix IE7 element positioning issue by force repainting.
  [jone]

- Do not hide the right portlet column.
  [Julian Infanger]

- Fix failing test introduced by the "anonymous access" change.
  Also test extjs configuration specifically anonymous.
  [jone]


3.3.2 (2012-10-26)
------------------

- Basic support for using the tabbed view anonymously.
  ExtJS is not supported and automatically disabled for anonymous users.
  [jone]

- Adjust javscripts: Use $ instead of deprecated jq.
  [phgross]

- Added condition for not showing uploadbox if text is dragged on the website.
  [Julian Infanger, jone]

- Use first tabbedview by default when accessing tabbed view anonymously.
  [jone]


3.3.1 (2012-10-16)
------------------

- Cleanup readme
  [mathias.leimgruber]


3.3 (2012-10-16)
----------------
